0.8.0
-----
- password reset

0.7.6
-----
- `status` field to the account object

0.7.5
-----
- failure messages


0.7.2
-----
- introduce internal id (instead of email-as-id)


0.7.0
-----
- stable state
- coverage 100%