@@ -1,7 +1,7 @@
 authenticate = require './cmd/authenticate'
 authorize = require './cmd/authorize'
 identify = require './cmd/identify'
-login = require './cmd/login'
+issue_token = require './cmd/issue_token'
 register = require './cmd/register'
 delete_ = require './cmd/delete'
 util = require './util'
@@ -17,7 +17,7 @@ module.exports = (options) ->
     seneca.add "role:#{role},cmd:authenticate", authenticate seneca, options
     seneca.add "role:#{role},cmd:authorize", authorize seneca, options
     seneca.add "role:#{role},cmd:identify", identify seneca, options
-    seneca.add "role:#{role},cmd:login", login seneca, options
+    seneca.add "role:#{role},cmd:issue_token", issue_token seneca, options
     seneca.add "role:#{role},cmd:register", register seneca, options
     seneca.add "role:#{role},cmd:delete", delete_ seneca, options
     name: role
