@@ -1,6 +1,6 @@
 // Generated by CoffeeScript 1.10.0
 (function() {
-  var authenticate, authorize, delete_, identify, login, register, util;
+  var authenticate, authorize, delete_, identify, issue_token, register, util;
 
   authenticate = require('./cmd/authenticate');
 
@@ -8,7 +8,7 @@
 
   identify = require('./cmd/identify');
 
-  login = require('./cmd/login');
+  issue_token = require('./cmd/issue_token');
 
   register = require('./cmd/register');
 
@@ -29,7 +29,7 @@
     seneca.add("role:" + role + ",cmd:authenticate", authenticate(seneca, options));
     seneca.add("role:" + role + ",cmd:authorize", authorize(seneca, options));
     seneca.add("role:" + role + ",cmd:identify", identify(seneca, options));
-    seneca.add("role:" + role + ",cmd:login", login(seneca, options));
+    seneca.add("role:" + role + ",cmd:issue_token", issue_token(seneca, options));
     seneca.add("role:" + role + ",cmd:register", register(seneca, options));
     seneca.add("role:" + role + ",cmd:delete", delete_(seneca, options));
     return {
